-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.1
-
None
-
Mac only
-
-
7432bb6bfbda1fcaa3b363b58b0339c780b66483 (5.0)
When using a static version of Qt the toolbuttons are not shown as checked if they are checkable. This is because the relevant resource file is not initialized.
| For Gerrit Dashboard: QTBUG-25391 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 33609,1 | Load Mac specific resources when used in a static build | master | qt/qtbase | Status: MERGED | +2 | 0 |
| 35556,1 | Load Mac specific resources in a static build | 4.8 | qt/qt | Status: MERGED | +2 | 0 |